--- a/src/app/components/buttons/buttons.component.scss
+++ b/src/app/components/buttons/buttons.component.scss
@@ -54,7 +54,7 @@
       left: 0px;
       width: var(--size);
       height: var(--size);
-      background-image: url("../../assets/mic.svg");
+      background-image: url("../../vector/mic.svg");
       background-size: contain;
       opacity: 1;
       &.off {
@@ -69,7 +69,7 @@
       left: 0px;
       width: var(--size);
       height: var(--size);
-      background-image: url("../../assets/chat.svg");
+      background-image: url("../../vector/chat.svg");
       background-size: contain;
       opacity: 0;
       animation: animacionChat 2s infinite;
