--- a/src/app/components/buttons/buttons.component.scss
+++ b/src/app/components/buttons/buttons.component.scss
@@ -1,5 +1,4 @@
 :host {
-  --transition: 200ms;
   --size: 80px;
   width: 100%;
   height: 140px;
@@ -10,11 +9,10 @@
   align-items: center;
   justify-content: center;
 }
-
 .btn {
   width: calc(var(--size) + 4px);
   height: calc(var(--size) + 4px);
-  background-color: #343541;
+  background-color: var(--grey-1);
   position: relative;
   transition: var(--transition);
   border-radius: calc((var(--size) + 4px) / 2);
@@ -22,7 +20,7 @@
     transform: scale(1.2);
     .bubble {
       transform: scale(0.75);
-      background-color: #3eebbf;
+      background-color: var(--green-3);
     }
   }
   .waves {
@@ -32,7 +30,7 @@
     width: var(--size);
     height: var(--size);
     border-radius: calc(var(--size) / 2);
-    border: 5px solid #3eebbf;
+    border: 5px solid var(--green-3);
     animation-name: animatewaves;
     animation-duration: 1.1s;
     animation-iteration-count: infinite;
@@ -45,7 +43,7 @@
     left: 2px;
     width: var(--size);
     height: var(--size);
-    background-color: #10a37f;
+    background-color: var(--green-1);
     .mic {
       pointer-events: none;
       transition: var(--transition);
@@ -100,33 +98,29 @@
     cursor: pointer;
     .bubble {
       transform: scale(0.75);
-      background-color: #1cc298;
+      background-color: var(--green-2);
     }
   }
   &.box {
     border-radius: 8px;
   }
 }
-
 @keyframes animatewaves {
   0% {
     transform: scale(0.8);
-    border: 8px solid #3eebbf;
+    border: 8px solid var(--green-3);
     opacity: 1;
   }
-
   100% {
     transform: scale(1.4);
-    border: 1px solid #3eebbf;
+    border: 1px solid var(--green-3);
     opacity: 0;
   }
 }
-
 @keyframes animacionChat {
   0% {
     transform: rotate(0deg);
   }
-
   100% {
     transform: rotate(-360deg);
   }
