--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -1,38 +1,26 @@
-::ng-deep body {
-  margin: 0px;
-  padding: 0px;
-  & * {
-    box-sizing: border-box;
-  }
-  background-color: transparent;
-  border-radius: 4px;
-}
 :host {
-  --transition: 200ms;
   display: flex;
   flex-flow: column nowrap;
-  font-family: Söhne, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto,
-    Ubuntu, Cantarell, Noto Sans, sans-serif, Helvetica Neue, Arial,
-    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  font-family: Söhne, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, Helvetica Neue, Arial, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   color: white;
   width: 160px;
   box-sizing: border-box;
   border: 2px solid #202123;
 }
 .header {
-  background-color: #343541;
+  background-color: var(--grey-1);
   font-size: 16px;
   .icon {
     width: 24px;
     height: 24px;
-    background-image: url("vector/icon.svg");
+    background-image: url("../../vector/icon.svg");
     background-size: contain;
     margin-right: 10px;
     &.red {
-      background-image: url("vector/icon-r.svg");
+      background-image: url("../../vector/icon-r.svg");
     }
     &.light {
-      background-image: url("vector/icon-l.svg");
+      background-image: url("../../vector/icon-l.svg");
     }
   }
   height: 40px;
@@ -63,14 +51,14 @@
     }
     .menu {
       opacity: 1;
-      background-image: url("vector/menu.svg");
+      background-image: url("../../vector/menu.svg");
       &.off {
         opacity: 0;
       }
     }
     .close {
       opacity: 0;
-      background-image: url("vector/close.svg");
+      background-image: url("../../vector/close.svg");
       &.on {
         opacity: 1;
       }
@@ -79,7 +67,7 @@
 }
 .body {
   position: relative;
-  background-color: #444654;
+  background-color: var(--grey-2);
   align-items: center;
   justify-content: center;
   display: flex;
@@ -88,9 +76,9 @@
   overflow: hidden;
 }
 .not-found {
-  background-color: #a31028;
+  background-color: var(--red-1);
   padding: 8px;
   text-align: center;
   border-radius: 8px;
-  border: 3px solid #343541;
+  border: 3px solid var(--grey-1);
 }
