--- a/src/app/components/options/options.component.scss
+++ b/src/app/components/options/options.component.scss
@@ -1,6 +1,4 @@
 :host {
-  --transition: 200ms;
-  --size: 80px;
   width: 100%;
   height: 140px;
   position: absolute;
@@ -13,6 +11,6 @@
   &.on {
     top: 0px;
   }
-  background-color: #444654;
+  background-color: var(--grey-2);
   z-index: 1;
 }
