--- a/src/app/components/buttons/buttons.component.html
+++ b/src/app/components/buttons/buttons.component.html
@@ -2,15 +2,19 @@
      [class.disabled]="recording || writting || speaking"
      [class.recording]="recording"
      [class.box]="writting || speaking">
-  <div *ngIf="recording"
-       class="waves"></div>
-  <div class="bubble"
-       (click)="onStart()"
-       [class.box]="writting || speaking">
-    <div class="mic"
-         [class.off]="writting || speaking"></div>
-    <div class="chat"
-         [class.on]="writting"></div>
-    <app-waveform [class.on]="speaking"></app-waveform>
-  </div>
+     <div *ngIf="recording"
+          class="waves"></div>
+     <div class="bubble"
+          (click)="onStart()"
+          [class.box]="writting || speaking">
+          <div class="mic"
+               [class.off]="writting || speaking">
+               <div class="vector"></div>
+          </div>
+          <div class="chat"
+               [class.on]="writting">
+               <div class="vector"></div>
+          </div>
+          <app-waveform [class.on]="speaking"></app-waveform>
+     </div>
 </div>
