--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-flow: column nowrap;
   font-family: Söhne, ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, Helvetica Neue, Arial, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-  color: white;
+  color: var(--white);
   width: 160px;
   box-sizing: border-box;
   border: 2px solid #202123;
@@ -11,16 +11,22 @@
   background-color: var(--grey-1);
   font-size: 16px;
   .icon {
+    transition: var(--transition);
     width: 24px;
     height: 24px;
-    background-image: url("../../vector/icon.svg");
     background-size: contain;
     margin-right: 10px;
+    border-radius: 2px;
+    background-color: var(--green-1);
     &.red {
-      background-image: url("../../vector/icon-r.svg");
+      background-color: var(--red-1);
     }
     &.light {
-      background-image: url("../../vector/icon-l.svg");
+      background-color: var(--green-3);
+    }
+    .vector {
+      -webkit-mask-image: url("../../vector/mic.svg");
+      mask-image: url("../../vector/mic.svg");
     }
   }
   height: 40px;
@@ -51,16 +57,22 @@
     }
     .menu {
       opacity: 1;
-      background-image: url("../../vector/menu.svg");
       &.off {
         opacity: 0;
+      }
+      .vector {
+        -webkit-mask-image: url("../../vector/menu.svg");
+        mask-image: url("../../vector/menu.svg");
       }
     }
     .close {
       opacity: 0;
-      background-image: url("../../vector/close.svg");
       &.on {
         opacity: 1;
+      }
+      .vector {
+        -webkit-mask-image: url("../../vector/close.svg");
+        mask-image: url("../../vector/close.svg");
       }
     }
   }
